syntax = "proto3";

import "google/protobuf/wrappers.proto";

package tari.mempool;

enum TxStorageResponse {
    TxStorageResponseNone = 0;
    TxStorageResponseUnconfirmedPool = 1;
    TxStorageResponseReorgPool = 4;
    TxStorageResponseNotStored = 5;
}

message TxStorage {
    TxStorageResponse response = 1;
}